--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Promo EIG 2017</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -26,11 +26,12 @@
 			<div class="slides">
 				<section>
 
-				<h4>#EIG: Entrepreneur d'Intérêt Général</h4>
-				<img src="./img/logo.png" alt="logo"/>
+				<h4>Le programme Entrepreneur d'Intérêt Général</h4>
+				<img src="./img/eig_logo_large.jpg" alt="logo"/>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
+						##
 					</script>
 				<section>
 			</div>
