--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 				<section>
 
 				<h4>Le programme Entrepreneur d'Intérêt Général</h4>
-				<img src="./img/eig_logo_large.jpg" alt="logo"/>
+
+				<p>9 défis | 11 lauréats</p>
+				<img src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
-						##
+						### Présentation en quelques mots...
+						* pitch
+						* parcours
 					</script>
 				<section>
 			</div>
