--- a/index.html
+++ b/index.html
@@ -26,18 +26,27 @@
 			<div class="slides">
 				<section>
 
-				<h4>Le programme Entrepreneur d'Intérêt Général</h4>
-
+				<h4>Le programme <br/>
+					Entrepreneur d'Intérêt Général</h4>
+				<img src="./img/logo.png" alt="logo"/>
 				<p>9 défis | 11 lauréats</p>
 				<img src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
-						### Présentation en quelques mots...
+						### La promo en quelques mots...
 						* pitch
 						* parcours
 					</script>
 				<section>
+					<section data-markdown>
+						<script type="text/template">
+							### Quelques sujets d'étonnement
+							*
+							*
+							* ...
+						</script>
+					<section>
 			</div>
 		</div>
 
