--- a/index.html
+++ b/index.html
@@ -26,27 +26,43 @@
 			<div class="slides">
 				<section>
 
-				<h4>Le programme <br/>
-					Entrepreneur d'Intérêt Général</h4>
+				<h3>Entrepreneur d'Intérêt Général</h3>
 				<img src="./img/logo.png" alt="logo"/>
 				<p>9 défis | 11 lauréats</p>
-				<img src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
+
 				</section>
 				<section data-markdown>
 					<script type="text/template">
 						### La promo en quelques mots...
 						* pitch
 						* parcours
+						<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
 					</script>
 				<section>
-					<section data-markdown>
-						<script type="text/template">
-							### Quelques sujets d'étonnement
-							*
-							*
-							* ...
-						</script>
-					<section>
+				<section data-markdown>
+					<script type="text/template">
+						### Rapport d'étonnement
+						*
+						*
+						* ...
+					</script>
+				<section>
+				<section data-markdown>
+					<script type="text/template">
+						### Premiers résultats
+						*
+						*
+						* ...
+					</script>
+				<section>
+				<section data-markdown>
+					<script type="text/template">
+						### Recommandations croisées
+						*
+						*
+						* ...
+					</script>
+				<section>
 			</div>
 		</div>
 
