--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 				<section data-markdown>
 					<script type="text/template">
 						### La promo en quelques mots...
+
+						* 9 défis dans 9 administrations: identification d'un irritant
+
+						#### Deux illustrations:
 						* pitch
 						* parcours
 						<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
@@ -42,24 +46,28 @@
 				<section data-markdown>
 					<script type="text/template">
 						### Rapport d'étonnement
-						*
-						*
-						* ...
+						* Environnements fermés qui empêchent l'interopérabilité dans les services et favorisent les failles de sécurité
+						* La place des techniciens/informaticiens dans l'administration: non stratégique et pas de plan de carrière
+						* Hiérarchie ultraverticale et dilution des responsabilité: réunions des "décideurs" vs développement des "makers"
+						* Le mode "projet" et le mode "décision": mesure des moyens vs mesure des résultats
+						
 					</script>
 				<section>
 				<section data-markdown>
 					<script type="text/template">
 						### Premiers résultats
-						*
-						*
-						* ...
+						* Croisement de 2 base de données => economie de quelques millions pour l'administration
+						* Ouverture interadministration et partage de base de données => règle le même irritant dans plusieurs administrations
+						* Maquettage d'un produit en 1 mois => économie d'une AMOA d'un an avec appel marché public
+						* Panorama fonctionnel et technique en 1 mois =>  outil de médiation entre départements et services
 					</script>
 				<section>
 				<section data-markdown>
 					<script type="text/template">
-						### Recommandations croisées
-						*
-						*
+						### Quelques recommandations en question
+						* Faire confiance et permettre l'autonomie
+						* Revaloriser les profils techniques/atypiques au sein de la fonction publique
+						* Réinternalisation des compétences SI au coeurs des métiers
 						* ...
 					</script>
 				<section>
