--- a/index.html
+++ b/index.html
@@ -29,18 +29,17 @@
 				<h3>Entrepreneur d'Intérêt Général</h3>
 				<img src="./img/logo.png" alt="logo"/>
 				<p>9 défis | 11 lauréats</p>
-
+				<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
+				<p><small>Les administrations ont identifié un irritant et ont publiés un défi</small></p>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
 						### La promo en quelques mots...
 
-						* 9 défis dans 9 administrations: identification d'un irritant
-
-						#### Deux illustrations:
+						à travers deux illustrations:
 						* pitch
 						* parcours
-						<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
+
 					</script>
 				<section>
 				<section data-markdown>
@@ -50,24 +49,24 @@
 						* La place des techniciens/informaticiens dans l'administration: non stratégique et pas de plan de carrière
 						* Hiérarchie ultraverticale et dilution des responsabilité: réunions des "décideurs" vs développement des "makers"
 						* Le mode "projet" et le mode "décision": mesure des moyens vs mesure des résultats
-						
 					</script>
 				<section>
 				<section data-markdown>
 					<script type="text/template">
 						### Premiers résultats
 						* Croisement de 2 base de données => economie de quelques millions pour l'administration
-						* Ouverture interadministration et partage de base de données => règle le même irritant dans plusieurs administrations
+						* Ouverture interadministration et partage de base de données => peut règler le même irritant dans plusieurs administrations
 						* Maquettage d'un produit en 1 mois => économie d'une AMOA d'un an avec appel marché public
 						* Panorama fonctionnel et technique en 1 mois =>  outil de médiation entre départements et services
+						* Mise au goût du jour en passant de l'aspect visuel du site du Ministère
 					</script>
 				<section>
 				<section data-markdown>
 					<script type="text/template">
 						### Quelques recommandations en question
-						* Faire confiance et permettre l'autonomie
+						* Faire confiance et permettre l'autonomie, le télétravail et son propre environnement de travail
 						* Revaloriser les profils techniques/atypiques au sein de la fonction publique
-						* Réinternalisation des compétences SI au coeurs des métiers
+						* Réinternalisation des compétences SI au coeurs des métiers dans chaque couche stratégique
 						* ...
 					</script>
 				<section>
