--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-				<img src="./img/logo.png" alt="logo"/>
-				<h3>Entrepreneur d'Intérêt Général</h3>
-				<p>9 défis | 11 lauréats</p>
-				<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
-				<p><small>Les administrations ont identifié un irritant et ont publiés un défi</small></p>
+					<img src="./img/logo.png" alt="logo"/>
+					<h3>Entrepreneur d'Intérêt Général</h3>
+					<p>9 défis | 11 lauréats</p>
+					<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
+					<p><small>Les administrations ont identifié un irritant et ont fait appel au programme</small></p>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
