--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						* parcours
 
 					</script>
-				<section>
+				</section>
 				<section data-markdown>
 					<script type="text/template">
 						### Rapport d'étonnement
@@ -49,7 +49,7 @@
 						* Hiérarchie ultraverticale et dilution des responsabilité: réunions des "décideurs" vs développement des "makers"
 						* Le mode "projet" et le mode "décision": mesure des moyens vs mesure des résultats
 					</script>
-				<section>
+				</section>
 				<section data-markdown>
 					<script type="text/template">
 						### Premiers résultats
@@ -60,7 +60,7 @@
 						* Mise au goût du jour en passant de l'aspect visuel du site du Ministère
 						* Déploiment d'un prototype sur des données de simulation pour tester la faisabilité du défi
 					</script>
-				<section>
+				</section>
 				<section data-markdown>
 					<script type="text/template">
 						### Quelques recommandations en question
@@ -69,9 +69,9 @@
 						* Réinternalisation des compétences SI au coeurs des métiers dans chaque couche stratégique
 						* ...
 					</script>
-				<section>
+				</section>
+			</div>
 		</div>
-
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
