--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</section>
 				<section data-markdown>
 					<script type="text/template">
-						### Rapport d'étonnement
+						### Rapport d'étonnement et anecdotes détonnantes
 						* Environnements fermés qui empêchent l'interopérabilité dans les services et favorisent les failles de sécurité
 						* La place des techniciens/informaticiens dans l'administration: non stratégique et pas de plan de carrière
 						* Hiérarchie ultraverticale et dilution des responsabilité: réunions des "décideurs" vs développement des "makers"
@@ -53,12 +53,12 @@
 				<section data-markdown>
 					<script type="text/template">
 						### Premiers résultats
-						* Croisement de 2 base de données => economie de quelques millions pour l'administration
-						* Ouverture interadministration et partage de base de données => peut règler le même irritant dans plusieurs administrations
+						* Croisement de 2 base de données internes => économie de quelques millions pour l'administration
+						* Ouverture interadministration et partage de base de données => peut règler le même irritant
 						* Maquettage d'un produit en 1 mois => économie d'une AMOA d'un an avec appel marché public
-						* Panorama fonctionnel et technique des métiers en 1 mois =>  outil de médiation entre départements et services
+						* Panorama fonctionnel et technique des métiers en 1 mois =>  outil de médiation entre départements
 						* Mise au goût du jour en passant de l'aspect visuel du site du Ministère
-						* Déploiment d'un prototype sur des données de simulation pour tester la faisabilité du défi
+						* Déploiement d'un prototype sur des données de simulation pour tester la faisabilité du défi
 					</script>
 				</section>
 				<section data-markdown>
@@ -79,9 +79,9 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				history: true,
-				markdown: {
-        	smartypants: true
-    	}
+			// 	markdown: {
+      //   	smartypants: true
+    	// }
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
