Update the first slides

--- a/index.html
+++ b/index.html
@@ -25,21 +25,47 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<img src="./img/logo.png" alt="logo"/>
-					<h3>Entrepreneur d'Intérêt Général</h3>
-					<p>9 défis | 11 lauréats</p>
-					<img width="50%" src="./img/lll-e1481624890597-1024x578.jpg" alt="promo2017"/>
-					<p><small>Les administrations ont identifié un irritant et ont fait appel au programme</small></p>
+					<img src="./img/logo.png" alt="Logo EIG"/>
+					<h3><b>Entrepreneur d'intérêt général</b></h3>
+					<p>9 défis — 10 mois — 11 lauréats</p>
+					<!-- <p><small>Les administrations ont identifié un irritant et ont fait appel au programme</small></p> -->
 				</section>
-				<section data-markdown>
-					<script type="text/template">
-						### La promo en quelques mots...
+				<section>
+					<section>
+						<h3><b>La promotion</b></h3>
+						<img src="./img/bardolle-150x150.jpg" alt="Bardolle"/>
+						<img src="./img/bouloc-150x150.jpg" alt="Bouloc"/>
+						<img src="./img/c42b-150x150.jpg" alt="De Quatrebarbes"/>
+						<img src="./img/chabouis-137x150.jpg" alt="Chabouis"/>
+						<img src="./img/cossin-150x150.jpg" alt="Cossin"/>
+						<img src="./img/david-150x150.jpg" alt="David"/>
+						<img src="./img/dupont-150x150.jpg" alt="Dupont"/>
+						<img src="./img/grab-150x150.jpg" alt="Gräbener"/>
+						<img src="./img/gross-150x150.jpg" alt="Gross"/>
+						<img src="./img/guery-150x150.jpg" alt="Guery"/>
+						<img src="./img/paclo-150x150.jpg" alt="Paclot"/>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### **Les administrations**
 
-						à travers deux illustrations:
-						* pitch
-						* parcours
+							🏛️ Cour des comptes
 
-					</script>
+							🎓 Ministère de l'Enseignement Supérieur et de la Recherche
+
+							📚 Bibliothèque nationale de France
+
+							👮 Ministère de l'Intérieur
+
+							⚕️ Ministère de la Santé
+
+							🌍 Agence française de développement
+
+							🎭 Ministère de la Culture
+
+							💶 Ministère de l'Économie et des Finances
+						</script>
+					</section>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
