Update the "rapport d'étonnement slide"

--- a/index.html
+++ b/index.html
@@ -67,14 +67,45 @@
 						</script>
 					</section>
 				</section>
-				<section data-markdown>
-					<script type="text/template">
-						### Rapport d'étonnement et anecdotes détonnantes
-						* Environnements fermés qui empêchent l'interopérabilité dans les services et favorisent les failles de sécurité
-						* La place des techniciens/informaticiens dans l'administration: non stratégique et pas de plan de carrière
-						* Hiérarchie ultraverticale et dilution des responsabilité: réunions des "décideurs" vs développement des "makers"
-						* Le mode "projet" et le mode "décision": mesure des moyens vs mesure des résultats
-					</script>
+				<section>
+					<section data-markdown>
+						<script type="text/template">
+							### **Rapport d'étonnement et anecdotes détonnantes**
+						</script>
+					</section>
+					<section data-markdown>
+							**🔒 Environnements fermés**
+
+							→ Pas interopérabilité
+
+							→ Failles de sécurité
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**👩‍💻 Place de l'informatique**
+
+							→ Fonction support
+
+							→ Pas de plan de carrière
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**↕️️️ Hiérarchie verticale et dilution des responsabilité**
+
+							→ Réunions des "décideurs"
+
+							→ Développement des "makers"
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**🗓️ Mode "projet" et mode "décision"**
+
+							→ Mesure des moyens *vs* mesure des résultats
+						</script>
+					</section>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
