Update the "Premiers résultats" slide

--- a/index.html
+++ b/index.html
@@ -107,17 +107,54 @@
 						</script>
 					</section>
 				</section>
-				<section data-markdown>
-					<script type="text/template">
-						### Premiers résultats
-						* Croisement de 2 base de données internes => économie de quelques millions pour l'administration
-						* Ouverture interadministration et partage de base de données => peut règler le même irritant
-						* Maquettage d'un produit en 1 mois => économie d'une AMOA d'un an avec appel marché public
-						* Panorama fonctionnel et technique des métiers en 1 mois =>  outil de médiation entre départements
-						* Mise au goût du jour en passant de l'aspect visuel du site du Ministère
-						* Déploiement d'un prototype sur des données de simulation pour tester la faisabilité du défi
-					</script>
+				<section>
+					<section data-markdown>
+						<script type="text/template">
+							### **Premiers résultats (en 1 à 2 mois)**
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**💰 Croisement de 2 bases de données internes**
+
+							⇒ économie de quelques millions pour l'administration
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**🔡 Ouverture et partage d'une base de données**
+
+							⇒ résolution du même irritant dans toute l'administration
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**✏️️ Maquettage d'un produit**
+
+							⇒ un an d'AMOA avec appel d'offre évité
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**💻 Panorama fonctionnel et technique des métiers**
+
+							⇒ outil de médiation entre départements
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							**🎨 Mise au goût du jour de l'aspect visuel de sites web**
+
+							⇒ fait juste "en passant"
+						</script>
+					</section>
+					<!-- <section data-markdown>
+						<script type="text/template">
+							* Déploiement d'un prototype sur des données de simulation pour tester la faisabilité du défi
+						</script>
+					</section> -->
 				</section>
+
 				<section data-markdown>
 					<script type="text/template">
 						### Quelques recommandations en question
