Update the "Recommandations" slide

--- a/index.html
+++ b/index.html
@@ -154,15 +154,27 @@
 						</script>
 					</section> -->
 				</section>
-
-				<section data-markdown>
-					<script type="text/template">
-						### Quelques recommandations en question
-						* Faire confiance et permettre l'autonomie, le télétravail et son propre environnement de travail
-						* Revaloriser les profils techniques/atypiques au sein de la fonction publique
-						* Réinternalisation des compétences SI au coeurs des métiers dans chaque couche stratégique
-						* ...
-					</script>
+				<section>
+					<section data-markdown>
+						<script type="text/template">
+							### **Quelques recommandations**
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							🤝 Faire confiance et permettre l'autonomie, le télétravail et son propre environnement de travail
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							👩‍🎤 Revaloriser les profils techniques/atypiques au sein de la fonction publique
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							💠 Réinternalisation des compétences SI au coeurs des métiers dans chaque couche stratégique
+						</script>
+					</section>
 				</section>
 			</div>
 		</div>
