Add a slide to introduce ourselves

--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
 							💶 Ministère de l'Économie et des Finances
 						</script>
 					</section>
+					<section>
+						<h3><b>Vos intervenants</b></h3>
+						<div id="left">
+							<img src="./img/c42b-150x150.jpg" alt="De Quatrebarbes"/>
+							<p>Constance de Quatrebarbes</p>
+							<small>📚 Bibliothèque nationale de France</small>
+						</div>
+						<div id="right">
+							<img src="./img/bardolle-150x150.jpg" alt="Bardolle"/>
+							<p>Frédéric Bardolle</p>
+							<small>🏛️ Cour des comptes</small>
+						</div>
+					</section>
 				</section>
 				<section>
 					<section data-markdown>
