Change heading importance

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 			<div class="slides">
 				<section>
 					<img src="./img/logo.png" alt="Logo EIG"/>
-					<h3><b>Entrepreneur d'intérêt général</b></h3>
+					<h2><b>Entrepreneur d'intérêt général</b></h2>
 					<p>9 défis — 10 mois — 11 lauréats</p>
 					<!-- <p><small>Les administrations ont identifié un irritant et ont fait appel au programme</small></p> -->
 				</section>
 				<section>
 					<section>
-						<h3><b>La promotion</b></h3>
+						<h2><b>La promotion</b></h2>
 						<img src="./img/bardolle-150x150.jpg" alt="Bardolle"/>
 						<img src="./img/bouloc-150x150.jpg" alt="Bouloc"/>
 						<img src="./img/c42b-150x150.jpg" alt="De Quatrebarbes"/>
@@ -47,7 +47,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### **Les administrations**
+							## **Les administrations**
 
 							🏛️ Cour des comptes
 
@@ -67,7 +67,7 @@
 						</script>
 					</section>
 					<section>
-						<h3><b>Vos intervenants</b></h3>
+						<h2><b>Vos intervenants</b></h2>
 						<div id="left">
 							<img src="./img/c42b-150x150.jpg" alt="De Quatrebarbes"/>
 							<p>Constance de Quatrebarbes</p>
@@ -83,11 +83,11 @@
 				<section>
 					<section data-markdown>
 						<script type="text/template">
-							### **Rapport d'étonnement et anecdotes détonnantes**
+							## **Rapport d'étonnement et anecdotes détonnantes**
 						</script>
 					</section>
 					<section data-markdown>
-							**🔒 Environnements fermés**
+							### **🔒 Environnements fermés**
 
 							→ Pas interopérabilité
 
@@ -96,7 +96,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**👩‍💻 Place de l'informatique**
+							### **👩‍💻 Place de l'informatique**
 
 							→ Fonction support
 
@@ -105,7 +105,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**↕️️️ Hiérarchie verticale et dilution des responsabilité**
+							### **↕️️️ Hiérarchie verticale et dilution des responsabilité**
 
 							→ Réunions des "décideurs"
 
@@ -114,7 +114,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**🗓️ Mode "projet" et mode "décision"**
+							### **🗓️ Mode "projet" et mode "décision"**
 
 							→ Mesure des moyens *vs* mesure des résultats
 						</script>
@@ -123,40 +123,40 @@
 				<section>
 					<section data-markdown>
 						<script type="text/template">
-							### **Premiers résultats (en 1 à 2 mois)**
+							## **Premiers résultats**
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**💰 Croisement de 2 bases de données internes**
+							### **💰 Croisement de 2 bases de données internes**
 
 							⇒ économie de quelques millions pour l'administration
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**🔡 Ouverture et partage d'une base de données**
+							### **🔡 Ouverture et partage d'une base de données**
 
 							⇒ résolution du même irritant dans toute l'administration
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**✏️️ Maquettage d'un produit**
+							### **✏️️ Maquettage d'un produit**
 
 							⇒ un an d'AMOA avec appel d'offre évité
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**💻 Panorama fonctionnel et technique des métiers**
+							### **💻 Panorama fonctionnel et technique des métiers**
 
 							⇒ outil de médiation entre départements
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							**🎨 Mise au goût du jour de l'aspect visuel de sites web**
+							### **🎨 Mise au goût du jour de l'aspect visuel de sites web**
 
 							⇒ fait juste "en passant"
 						</script>
@@ -170,7 +170,7 @@
 				<section>
 					<section data-markdown>
 						<script type="text/template">
-							### **Quelques recommandations**
+							## **Quelques recommandations**
 						</script>
 					</section>
 					<section data-markdown>
