Simplify the copy

--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
 						<script type="text/template">
 							### **💰 Croisement de 2 bases de données internes**
 
-							⇒ économie de quelques millions pour l'administration
+							⇒ quelques millions économisés
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
 							### **🔡 Ouverture et partage d'une base de données**
 
-							⇒ résolution du même irritant dans toute l'administration
+							⇒ un même irritant résolu dans toute l'administration
 						</script>
 					</section>
 					<section data-markdown>
@@ -151,7 +151,7 @@
 						<script type="text/template">
 							### **💻 Panorama fonctionnel et technique des métiers**
 
-							⇒ outil de médiation entre départements
+							⇒ un outil de médiation entre départements
 						</script>
 					</section>
 					<section data-markdown>
