Simplify the copy (again)

--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							🤝 Faire confiance et permettre l'autonomie, le télétravail et son propre environnement de travail
+							### 🤝 Faire confiance et accroître l'autonomie
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							👩‍🎤 Revaloriser les profils techniques/atypiques au sein de la fonction publique
+							### 👩‍🎤 Revaloriser les profils techniques et atypiques
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							💠 Réinternalisation des compétences SI au coeurs des métiers dans chaque couche stratégique
+							### 💠 Réinternaliser des compétences SI au cœur des métiers
 						</script>
 					</section>
 				</section>
