Replace handshake emoji with pray emoji, fix #1

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### 🤝 Faire confiance et accroître l'autonomie
+							### 🙏 Faire confiance et accroître l'autonomie
 						</script>
 					</section>
 					<section data-markdown>
