Change some wording & fix a missing HTML tag, fix #3

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 						</script>
 					</section>
 					<section data-markdown>
+						<script type="text/template">
 							### **🔒 Environnements fermés**
 
 							→ Pas interopérabilité
@@ -130,7 +131,7 @@
 						<script type="text/template">
 							### **💰 Croisement de 2 bases de données internes**
 
-							⇒ quelques millions économisés
+							⇒ quelques millions d'euros d'économies potentielles
 						</script>
 					</section>
 					<section data-markdown>
