Correction fautes de frappe

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 							🌍 Agence française de développement
 
-							🎭 Ministère de la Culture
+							🎭 Ministère de la Culture et de la Communication
 
 							💶 Ministère de l'Économie et des Finances
 						</script>
@@ -106,7 +106,7 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### **↕️️️ Hiérarchie verticale et dilution des responsabilité**
+							### **↕️️️ Hiérarchie verticale et dilution des responsabilités**
 
 							→ Réunions des "décideurs"
 
