Précision de l'année dans le titre

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<section>
 					<img src="./img/logo.png" alt="Logo EIG"/>
 					<h2><b>Entrepreneur d'intérêt général</b></h2>
-					<p>9 défis — 10 mois — 11 lauréats</p>
+					<p>2017 : 9 défis — 10 mois — 11 lauréats</p>
 					<!-- <p><small>Les administrations ont identifié un irritant et ont fait appel au programme</small></p> -->
 				</section>
 				<section>
